Removed Room assosciation with User in router and model for now

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,8 @@ yarn-error.log
 .history/*
 
 # Miscellaneous
-frontend/.angular/cache
+/frontend/.angular/cache
+/backend/node_modules
 .sass-cache/
 /connect.lock
 /coverage
