Added frontend/node_modules to gitignore and dded sendgrid to package

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ yarn-error.log
 # Miscellaneous
 /frontend/.angular/cache
 /backend/node_modules
+/frontend/node_modules
 .sass-cache/
 /connect.lock
 /coverage
