--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@sendgrid/mail": "^7.6.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.6",
