--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "homepage": "https://github.com/choyiny/microblog#readme",
   "dependencies": {
+    "auth0-js": "^9.20.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie": "^0.5.0",
