--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "socket.io-redis": "^6.1.1",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "twilio": "^4.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
