--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,17 @@
   "author": "",
   "homepage": "https://github.com/choyiny/microblog#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "auth0-js": "^9.20.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "ioredis": "^5.3.1",
+    "jwks-rsa": "^3.0.1",
     "multer": "^1.4.5-lts.1",
     "sequelize": "^6.25.3",
     "socket.io": "^4.6.1",
