--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,3 +14,5 @@ FROM nginx:1.21.6-alpine
 COPY --from=build /app/dist/nanoblog /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+
+# Test
