--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -54,6 +54,6 @@ jobs:
           username: jasond20
           key: ${{ secrets.SECRET_KEY }}
           script: |
-            docker login https://ghcr.io -u jasond20
+            docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
             docker pull ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
-            docker run -d -p 80:80 ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
+            docker run -d -p 3000:3000 ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
