--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           host: 159.203.54.94
           username: jasond20
-          key: ${{ secrets.SECRET_KEY }}
+          key: ${{ secrets.PRIVATE_KEY }}
           script: |
             docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
             docker pull ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
