--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - main
     # Only run this workflow if the commit has modified files from frontend
-    # paths:
-    #  - frontend/**
+    paths:
+      - frontend/**
 
 env:
   IMAGE_NAME: frontend-webtama
@@ -50,10 +50,10 @@ jobs:
       - name: Deploy NodeJS app
         uses: appleboy/ssh-action@master
         with:
-          host: 159.203.54.94
+          host: 165.227.32.234
           username: jasond20
-          key: ${{ secrets.Secret_KEY }}
+          key: ${{ secrets.SECRET_KEY }}
           script: |
             docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
             docker pull ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
-            docker run -d -p 3000:3000 ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
+            docker run -d -p 4200:4200 ghcr.io/uoft-utsc-cs-sandbox/frontend-jasond20
