--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - main
     # Only run this workflow if the commit has modified files from frontend
-    paths:
-      - backend/**
+    #paths:
+    #  - backend/**
 
 env:
   IMAGE_NAME: backend-webtama
