--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -51,7 +51,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: 165.227.32.234
-          username: jasond20
+          username: root
           key: ${{ secrets.SECRET_KEY }}
           script: |
             echo "${{ secrets.SECRET_KEY }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
