--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - main
     # Only run this workflow if the commit has modified files from frontend
-    paths:
-      - frontend/**
+    #paths:
+    #  - frontend/**
 
 env:
   IMAGE_NAME: frontend-webtama
@@ -54,5 +54,7 @@ jobs:
           username: root
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
+            docker stop ghcr.io/uoft-utsc-cs-sandbox/frontend-webtama
+            docker rm ghcr.io/uoft-utsc-cs-sandbox/frontend-webtama
             docker pull ghcr.io/uoft-utsc-cs-sandbox/frontend-webtama
             docker run -d -p 80:80 ghcr.io/uoft-utsc-cs-sandbox/frontend-webtama
