--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -54,7 +54,6 @@ jobs:
           username: root
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            docker stop ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
-            docker rm ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
+            docker stop $(docker ps -a -q --filter "ancestor=ghcr.io/uoft-utsc-cs-sandbox/backend-webtama")
             docker pull ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
             docker run -d -p 3000:3000 ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
