--- a/.github/workflows/docker-compose.yml
+++ b/.github/workflows/docker-compose.yml
@@ -1,22 +1,6 @@
 version: '3.7'
 
 services:
-  cli:
-    build: ./cli
-    image: evgeniy-khyst/letsencrypt-docker-compose-cli
-    user: ${CURRENT_USER}
-    group_add:
-      - ${DOCKER_GROUP}
-    environment:
-      - COMPOSE_PROJECT_NAME
-      - CURRENT_USER
-      - DOCKER_GROUP
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./:/workdir
-    profiles:
-      - config
-      
   nginx-proxy:
     image: jwilder/nginx-proxy
     container_name: nginx-proxy
@@ -38,71 +22,32 @@ services:
       - ./html:/usr/share/nginx/html
       - ./acme:/etc/acme.sh
     environment:
-        - DEFAULT_EMAIL=<your_email>
-        
-  certbot:
-    build: ./certbot
-    image: evgeniy-khyst/certbot
-    environment:
-      - DRY_RUN
-    volumes:
-      - ./config.json:/letsencrypt-docker-compose/config.json:ro
-      - letsencrypt_certs:/etc/letsencrypt
-      - certbot_acme_challenge:/var/www/certbot
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          'test -n "$$(ls -A /etc/letsencrypt/live/)" || test "$$DRY_RUN" == "true" || exit 1',
-        ]
-      interval: 30s
-      timeout: 30s
-      start_period: 30s
-      retries: 5
-    depends_on:
-      nginx:
-        condition: service_healthy
-    restart: unless-stopped
-
-  cron:
-    build: ./cron
-    image: evgeniy-khyst/cron
-    environment:
-      - COMPOSE_PROJECT_NAME
-      - DRY_RUN
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./:/workdir:ro
-    depends_on:
-      certbot:
-        condition: service_healthy
-    restart: unless-stopped
+        - DEFAULT_EMAIL=jasoncndai@gmail.com
     
   frontend:
-    image: ghcr.io/uoft-utsc-cs-sandbox/frontend-<your github username>
+    image: ghcr.io/uoft-utsc-cs-sandbox/frontend-webtama
     container_name: frontend
     restart: always
     expose:
       - 80
     environment:
-      - VIRTUAL_HOST=<your_domain>
-      - LETSENCRYPT_HOST=<your_domain>
-  backend:
-    image: ghcr.io/uoft-utsc-cs-sandbox/backend-<your github username>
+      - VIRTUAL_HOST=webtama.works
+      - LETSENCRYPT_HOST=<your_domain>webtama.works
+    image: ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
     container_name: backend
     restart: always
     expose:
       - 3000
     environment:
-      - VIRTUAL_HOST=api.<your_domain>
-      - LETSENCRYPT_HOST=api.<your_domain>
+      - VIRTUAL_HOST=api.webtama.works
+      - LETSENCRYPT_HOST=api.webtama.works
       
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion:2.0
     container_name: nginx-proxy-le
     restart: always
     environment:
-      - DEFAULT_EMAIL=you@example.com
+      - DEFAULT_EMAIL=jasoncndai@gmail.com
     volumes_from:
       - nginx-proxy
     volumes:
