--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@auth0/auth0-angular": "^2.0.2",
+    "@sendgrid/mail": "^7.6.0",
+    "@stripe/stripe-js": "^1.52.0",
+    "ngx-stripe": "^8.2.0",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.6.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@sendgrid/mail": "^7.6.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.6",
