--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ PORT=8080
 CLIENT_ORIGIN_URL=http://webtama.works:4200
 AUTH0_AUDIENCE=https://dev-0rubju8i61qqpmgv.us.auth0.com/api/v2/
 AUTH0_DOMAIN=https://dev-0rubju8i61qqpmgv.us.auth0.com
+COMPOSE_PROJECT_NAME=letsencrypt-docker-compose
+CURRENT_USER=0:0
+DOCKER_GROUP=0
