removed run from frontend/backend yml, moved to docker-compose

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -49,6 +49,7 @@ jobs:
           username: root
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
+            docker pull ghcr.io/uoft-utsc-cs-sandbox/docker-compose
             docker compose down
             docker compose build
             docker compose up -d
