--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,8 +96,8 @@ services:
     expose:
       - 3000
     environment:
-      - VIRTUAL_HOST=api.webtama.works
-      - LETSENCRYPT_HOST=api.webtama.works
+      - VIRTUAL_HOST=api.webtama.works:3000
+      - LETSENCRYPT_HOST=api.webtama.works:3000
     
 volumes:
   nginx_conf_ssl:
