--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -6,8 +6,8 @@ on:
     branches:
       - main
     # Only run this workflow if the commit has modified files from frontend
-    paths:
-      - backend/**
+    #paths:
+    #  - backend/**
 
 env:
   IMAGE_NAME: backend-webtama
@@ -54,6 +54,5 @@ jobs:
           username: root
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            docker stop $(docker ps -a -q --filter "ancestor=ghcr.io/uoft-utsc-cs-sandbox/backend-webtama")
             docker pull ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
-            docker run -d -p 3000:3000 ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
+            
