Added reference to docker compose in other YAML and modified config

--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Build image
         run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        networks:
+          - letsencrypt-docker-compose
+        restart: unless-stopped
 
       - name: Log into GitHub Container Registry
         # TODO: Create a Personal Access Tokens (PAT) with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
@@ -55,4 +58,11 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             docker pull ghcr.io/uoft-utsc-cs-sandbox/backend-webtama
+            
+version: "3"
+
+networks:
+  letsencrypt-docker-compose:
+    name: letsencrypt-docker-compose_default
+    external: true
             
