Added backend domains to upstreams.conf for nginx

--- a/nginx-conf/conf.d/upstreams.conf
+++ b/nginx-conf/conf.d/upstreams.conf
@@ -1,4 +1,6 @@
-#upstream backend {
+upstream backend {
 #    server backend1.example.com:8080;
 #    server backend2.example.com:8080;
-#}
+     server api.webtama.works;
+     server webtama.works:3000;
+}
