--- a/nginx-conf/conf.d/upstreams.conf
+++ b/nginx-conf/conf.d/upstreams.conf
@@ -1,6 +1,6 @@
-upstream backend {
+#upstream backend {
 #    server backend1.example.com:8080;
 #    server backend2.example.com:8080;
 #    server webtama.works:3000;
-     server api.webtama.works;
-}
+#     server api.webtama.works;
+#}
