--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,9 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    depends_on:
+      - backend
+      - frontend
     healthcheck:
       test: ["CMD", "nc", "-z", "nginx", "80"]
       interval: 30s
@@ -40,6 +43,7 @@ services:
       start_period: 30s
       retries: 10
     restart: unless-stopped
+    
 
   certbot:
     build: ./certbot
