--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -1,3 +1,11 @@
+upstream backend {
+  server backend:3000
+}
+
+upstream frontend {
+  server frontend:80
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -37,6 +45,18 @@ server {
     
         # Let Nginx start if upstream host is unreachable
         set $upstream webtama.works:3000;
+        proxy_pass http://$upstream;
+    
+    }
+    
+    location / {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    
+        # Let Nginx start if upstream host is unreachable
+        set $upstream webtama.works:80;
         proxy_pass http://$upstream;
     
     }
