--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -1,9 +1,9 @@
 upstream backend {
-  server backend:3000
+  server backend:3000;
 }
 
 upstream frontend {
-  server frontend:80
+  server frontend:80;
 }
 
 server {
