--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -15,8 +15,14 @@ server {
         root /var/www/certbot/webtama.works;
     }
 
-    location / {
-        return 301 https://$host$request_uri;
+     location / {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        set $upstream webtama.works:80;
+        proxy_pass http://$upstream;
     }
 }
 
@@ -43,10 +49,8 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        # Let Nginx start if upstream host is unreachable
         set $upstream webtama.works:3000;
         proxy_pass http://$upstream;
-    
     }
     
     location / {
@@ -55,9 +59,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        # Let Nginx start if upstream host is unreachable
         set $upstream webtama.works:80;
         proxy_pass http://$upstream;
-    
     }
 }
