--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -49,8 +49,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        set $upstream webtama.works:3000;
-        proxy_pass http://$upstream;
+        proxy_pass http://webtama.works:3000;
     }
     
     location / {
@@ -59,7 +58,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        set $upstream webtama.works:80;
-        proxy_pass http://$upstream;
+        proxy_pass http://webtama.works:80;
     }
 }
