--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    network_mode: "host"
     depends_on:
       - backend
       - frontend
