--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -21,8 +21,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        set $upstream webtama.works:80;
-        proxy_pass http://$upstream;
+        proxy_pass http://webtama.works:80;
+    }
+    
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    
+        proxy_pass http://webtama.works:3000;
     }
 }
 
