--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,8 @@ services:
     expose:
       - 3000
     environment:
-      - VIRTUAL_HOST=api.webtama.works
-      - LETSENCRYPT_HOST=api.webtama.works
+      - VIRTUAL_HOST=webtama.works:3000
+      - LETSENCRYPT_HOST=webtama.works:3000
     
   frontend:
     image: ghcr.io/uoft-utsc-cs-sandbox/frontend-webtama
