--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -21,7 +21,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        proxy_pass http://webtama.works:80;
+        proxy_pass http://webtama.works;
     }
     
     location /api/ {
@@ -84,6 +84,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://webtama.works:80;
+        proxy_pass http://webtama.works;
     }
 }
