--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -3,7 +3,7 @@ upstream backend {
 }
 
 upstream frontend {
-  server frontend;
+  server frontend:4200;
 }
 
 server {
@@ -30,7 +30,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://webtama.works:3000;
+        proxy_pass http://api.webtama.works;
     }
     
     location /users {
@@ -39,7 +39,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://webtama.works:3000;
+        proxy_pass http://api.webtama.works;
     }
 }
 
@@ -66,7 +66,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://webtama.works:3000;
+        proxy_pass http://api.webtama.works;
     }
     
     location /users {
@@ -75,7 +75,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://webtama.works:3000;
+        proxy_pass http://api.webtama.works;
     }
     
     location / {
