--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -3,7 +3,7 @@ upstream backend {
 }
 
 upstream frontend {
-  server frontend:8080;
+  server frontend;
 }
 
 server {
@@ -42,7 +42,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://api.webtama.works;
+        proxy_pass http://webtama.works:3000;
     }
     
     location / {
@@ -51,6 +51,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
-        proxy_pass http://webtama.works;
+        proxy_pass http://webtama.works:8000;
     }
 }
