--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -14,9 +14,7 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot/webtama.works;
     }
-    
-    return 301 https://$host$request_uri;
-    
+
 }
 
 server {
@@ -36,21 +34,26 @@ server {
 
 
 
-    location /api/ {
-        proxy_set_header Host $host;
+    location / {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     
+        # Let Nginx start if upstream host is unreachable
+        proxy_pass http://webtama.works;
+    
+    }
+    
+    location = /api {
+        return 302 /api/;
+    }
+
+    location /api/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_pass http://webtama.works:3000;
     }
-    
-    location / {
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    
-        proxy_pass http://webtama.works:8000;
-    }
 }
+
