Changed build YAML to always run on push

--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -3,8 +3,8 @@ name: Publish Backend Skeleton to GHCR
 on:
   push:
     # Only run this workflow if it is a commit to main.
-    branches:
-      - main
+    #branches:
+    #  - main
     # Only run this workflow if the commit has modified files from frontend
     #paths:
     #  - backend/**
