--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -3,8 +3,8 @@ name: Publish Angular Skeleton to GHCR
 on:
   push:
     # Only run this workflow if it is a commit to main.
-    branches:
-      - main
+    #branches:
+    #  - main
     # Only run this workflow if the commit has modified files from frontend
     #paths:
     #  - frontend/**
