--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -14,6 +14,8 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot/webtama.works;
     }
+    
+    return 301 https://$host$request_uri;
 
 }
 
@@ -35,6 +37,7 @@ server {
 
 
     location / {
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -49,6 +52,7 @@ server {
     }
 
     location /api/ {
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
