Changed frontend from 8000 to 80 in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,10 +99,10 @@ services:
     container_name: frontend
     restart: always
     expose:
-      - 8000
+      - 80
     environment:
-      - VIRTUAL_HOST=webtama.works:8000
-      - LETSENCRYPT_HOST=webtama.works:8000
+      - VIRTUAL_HOST=webtama.works
+      - LETSENCRYPT_HOST=webtama.works
   
 volumes:
   nginx_conf_ssl:
