Changed frontend to 8000 port

--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -3,7 +3,7 @@ upstream backend {
 }
 
 upstream frontend {
-  server frontend;
+  server frontend:8000;
 }
 
 server {
@@ -43,7 +43,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     
         # Let Nginx start if upstream host is unreachable
-        proxy_pass http://webtama.works;
+        proxy_pass http://webtama.works:8000;
     
     }
     
