--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,10 +99,10 @@ services:
     container_name: frontend
     restart: always
     expose:
-      - 80
+      - 8000
     environment:
-      - VIRTUAL_HOST=webtama.works
-      - LETSENCRYPT_HOST=webtama.works
+      - VIRTUAL_HOST=webtama.works:8000
+      - LETSENCRYPT_HOST=webtama.works:8000
   
 volumes:
   nginx_conf_ssl:
