--- a/nginx-conf/conf.d/webtama.works.conf
+++ b/nginx-conf/conf.d/webtama.works.conf
@@ -1,9 +1,9 @@
 upstream backend {
-  server backend:3000;
+    server backend:3000;
 }
 
 upstream frontend {
-  server frontend:8000;
+    server frontend:4200;
 }
 
 server {
@@ -14,9 +14,10 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot/webtama.works;
     }
-    
-    return 301 https://$host$request_uri;
 
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -32,7 +33,6 @@ server {
 
     include /etc/nginx/conf.d/includes/hsts.conf;
 
-    resolver 127.0.0.11;
 
 
 
@@ -41,23 +41,16 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    
-        # Let Nginx start if upstream host is unreachable
-        proxy_pass http://webtama.works:8000;
-    
-    }
-    
-    location = /api {
-        return 302 /api/;
-    }
 
+        proxy_pass http://frontend;
+    }
+    
     location /api/ {
-        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_pass http://webtama.works:3000;
+    
+        proxy_pass http://backend;
+    
     }
 }
-
