--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -3,11 +3,11 @@ name: Publish Angular Skeleton to GHCR
 on:
   push:
     # Only run this workflow if it is a commit to main.
-    #branches:
-    #  - main
+    branches:
+      - main
     # Only run this workflow if the commit has modified files from frontend
-    #paths:
-    #  - frontend/**
+    paths:
+      - frontend/**
 
 env:
   IMAGE_NAME: frontend-webtama
