--- a/.github/workflows/restart-docker-compose.yml
+++ b/.github/workflows/restart-docker-compose.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   deploy:
+    needs: [build_frontend, build_backend]
     runs-on: ubuntu-latest
 
     steps:
@@ -21,4 +22,5 @@ jobs:
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
             docker-compose down
+            docker-compose pull
             docker-compose up -d
