Changed need field for deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    needs: [build_frontend.push, build_backend.push]
+    needs: [Build Backend, Build Frontend]
     runs-on: ubuntu-latest
 
     steps:
