Changed all routes to https

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-CLIENT_ORIGIN_URL=http://webtama.works
+CLIENT_ORIGIN_URL=https://webtama.works
 AUTH0_AUDIENCE=https://dev-0rubju8i61qqpmgv.us.auth0.com/api/v2/
 AUTH0_DOMAIN=https://dev-0rubju8i61qqpmgv.us.auth0.com
 COMPOSE_PROJECT_NAME=letsencrypt-docker-compose
